--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
+.angular/
 /.angular/cache
 .sass-cache/
 /connect.lock
@@ -37,6 +38,8 @@ yarn-error.log
 testem.log
 /typings
 __screenshots__/
+src/environments/environment*.ts
+
 
 # System files
 .DS_Store
